[tool.poetry]
name = "glassfrog"
version = "0.4.1"
description = "Python client for Glassfrog API"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "glassfrog" },
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"


[tool.poetry.dev-dependencies]
pylint = "*"
nose = "^1"
coverage = "*"
httpretty = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
